# Qt-Authentication

./: .gitignore  CMakeLists.txt  README.md
src/Core/Authentication/: CMakeLists.txt  LoginAuthentication.cpp  LoginAuthentication.h
src/Main/: CMakeLists.txt  main.cpp
src/Qml/: CMakeLists.txt  DeviceCard.qml  Home.qml  Loading.qml  Login.qml  Main.qml  ToggleSwitch.qml
